[tool.poetry]
name = "rock-n-road"
version = "0.1.0"
description = "Scrape RnR interval sessions"
authors = ["Dave Edwards <dave@dwedigital.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
postmarker = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
